style.css
@import url('https://unpkg.com/@catppuccin/palette/css/catppuccin.css');

a, p, h1, li, ul {
    color: var(--ctp-frappe-base);
    font-family: Arial, Helvetica, sans-serif;
}

li:not(:last-child) {
    padding-bottom: 8px;
}

body {
  
  background-color: var(--ctp-frappe-green);
  
}

#subtext {
    font-size: 14px;
    color: var(--ctp-frappe-overlay2);
}

#biggy {
    font-size: 26px;
}

#griddy {
    display: grid;
    grid-template-columns: max-content max-content;
}

.paddy {
    padding-right: 30px;
}

.raddy {
    padding-left: 25px;
}

#bigtitle {
    font-size: 45px;
}

.emote {
    vertical-align: middle;
    height: 16px;
}

